# python_msvc

./: LICENSE  README.md  pyMSVC.py  pyproject.toml  python_msvc.py  setup.py
.github/workflows/: python-publish.yml
pyMSVC/: __init__.py  vswhere.py
