[project]
name = "pyMSVC"
version = "0.6.1"
description = "Simple to use MSVC build environment setup tool."
requires-python = ">=3.6"
dependencies = ["comtypes==1.4.13"]
authors = [{name = "Kevin Schlosser"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Setuptools Plugin",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: C#",
    "Programming Language :: F#",
    "Programming Language :: Python :: Free Threading",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers"
]

[project.urls]
Homepage = "https://github.com/kdschlosser/python_msvc"
Issues = "https://github.com/kdschlosser/python_msvc/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
